# lha

./: .gitignore  AGENTS.md  Cargo.toml  README.md  check_width  justfile
src/agent/cli/: Cargo.toml  README.md  build.rs
src/agent/cli/src/: debug_sandbox.rs  entry.rs  lib.rs  main.rs  mcp_cmd.rs  product.rs  product_tests.rs  test_support.rs  wsl_paths.rs
src/agent/cli/tests/: execpolicy.rs  features.rs  mcp_add_remove.rs  mcp_list.rs  public_api.rs  single_binary_compat.rs
src/agent/feedback/: Cargo.toml
src/agent/feedback/src/: lib.rs
src/agent/memories/read/: Cargo.toml
src/agent/memories/write/: Cargo.toml
src/agent/runtime/: Cargo.toml  README.md  config.schema.json  gpt-5.2-codex_prompt.md  gpt_5_1_prompt.md  gpt_5_2_prompt.md  gpt_5_codex_prompt.md  models.json  models.schema.json  prompt.md  prompt_with_apply_patch_instructions.md  state.schema.json
src/agent/runtime/src/: api_bridge.rs  apply_patch.rs  auth.rs  bash.rs  buddy_intro.rs  chat_role_compatibility.rs  client.rs  codex.rs  codex_delegate.rs  codex_thread.rs  compact.rs  compact_remote.rs  connectors.rs  custom_prompts.rs  default_client.rs  env.rs  environment_context.rs  error.rs  event_mapping.rs  exec.rs  exec_policy.rs  features.rs  git_info.rs  landlock.rs  lib.rs  mcp_connection_manager.rs  mcp_tool_call.rs  mentions.rs  message_history.rs  otel_init.rs  parse_command.rs  path_utils.rs  personality_migration.rs  powershell.rs  project_doc.rs  review_prompts.rs  safety.rs  seatbelt.rs  shell_snapshot.rs  spawn.rs  (+9 more)
src/agent/runtime/tests/: architecture_sdk_boundary.rs  chat_completions_payload.rs  chat_completions_sse.rs  responses_headers.rs
src/coding-agent/chatgpt/: Cargo.toml
src/coding-agent/chatgpt/src/: apply_command.rs  chatgpt_client.rs  chatgpt_token.rs  connectors.rs  get_task.rs
src/coding-agent/cli/: Cargo.toml
src/coding-agent/cli/src/: debug_sandbox.rs  lib.rs  login.rs  main.rs  mcp_cmd.rs  wsl_paths.rs
src/coding-agent/cli/tests/: execpolicy.rs  features.rs  mcp_add_remove.rs  mcp_list.rs
src/coding-agent/feedback/: Cargo.toml
src/coding-agent/feedback/src/: lib.rs
src/core/: Cargo.toml  README.md
src/core/agent-core/: Cargo.toml
src/core/agent-core/src/: kernel.rs  lib.rs
src/core/agent-runtime/: Cargo.toml
src/core/agent-runtime/src/: builder.rs  error.rs  events.rs  input.rs  lib.rs  processor.rs  session.rs  snapshot.rs
src/core/protocol/: Cargo.toml  README.md
src/core/protocol/src/: account.rs  config_types.rs  items.rs  legacy_transcript.rs  lib.rs  memory_citation.rs  models.rs  openai_models.rs  protocol.rs  workflow.rs
src/core/src/: builder.rs  cancel.rs  error.rs  input.rs  kernel.rs  lib.rs  manager.rs  processor.rs  session.rs  skills.rs  snapshot.rs  status.rs
src/core/src/mcp/: mod.rs  types.rs
src/core/src/tools/: context.rs  executor.rs  mod.rs  registry.rs
src/core/state/: Cargo.toml
src/core/state/migrations/: 0017_thread_goals.sql
src/core/state/src/: extract.rs  lib.rs  log_db.rs  migrations.rs  runtime.rs
src/integrations/app-server/: Cargo.toml  README.md
src/integrations/app-server/src/: bespoke_event_handling.rs  codex_message_processor.rs  config_api.rs  dynamic_tools.rs  filters.rs  fuzzy_file_search.rs  lib.rs  main.rs  message_processor.rs  models.rs  outgoing_message.rs
src/integrations/backend-client/: Cargo.toml
src/integrations/backend-client/src/: client.rs  types.rs
src/integrations/cloud/cloud-requirements/: Cargo.toml
src/integrations/cloud/cloud-tasks/: Cargo.toml
src/integrations/mcp-server/: Cargo.toml
src/integrations/mcp-server/src/: codex_tool_config.rs  codex_tool_runner.rs  exec_approval.rs  lib.rs  main.rs  message_processor.rs  outgoing_message.rs  patch_approval.rs
src/llm/: Cargo.toml  README.md
src/llm/api/codex-api/: Cargo.toml  README.md
src/llm/api/codex-client/: Cargo.toml  README.md
src/llm/runtime/: Cargo.toml
src/llm/runtime/src/: auth.rs  catalog.rs  client.rs  compatibility.rs  config.rs  error.rs  lib.rs  prompt.rs  protocol_bridge.rs  provider.rs  runtime.rs  runtime_types.rs  semantic.rs  tool_json.rs  types.rs
src/llm/src/: auth.rs  catalog.rs  config.rs  env.rs  error.rs  lib.rs  prompt.rs  provider.rs  runtime.rs  runtime_client.rs  semantic.rs  telemetry.rs
src/llm/src/api/: auth.rs  common.rs  completion.rs  error.rs  mod.rs  proposed_plan_parser.rs  provider.rs  telemetry.rs
src/llm/src/client/: mod.rs  transport.rs
src/llm/src/types/: base_instructions_default.md  config.rs  mod.rs  model_catalog.rs  transcript.rs  usage.rs
src/llm/tests/: api_clients.rs  api_models_integration.rs  api_sse_end_to_end.rs  runtime_non_streaming.rs
src/llm/types/: Cargo.toml
src/llm/types/src/: lib.rs  model_catalog.rs  transcript.rs  usage.rs
src/platform/exec/: Cargo.toml
src/platform/exec/src/: cli.rs  event_processor.rs  event_processor_with_human_output.rs  event_processor_with_jsonl_output.rs  event_processor_with_raw_event_output.rs  exec_events.rs  lib.rs  main.rs
src/platform/exec/tests/: event_processor_with_json_output.rs
src/platform/ipc/stdio-to-uds/: Cargo.toml  README.md
src/platform/sandbox/execpolicy/: Cargo.toml  README.md
src/platform/sandbox/linux/: Cargo.toml  README.md
src/resources/file-search/: Cargo.toml  README.md
src/resources/file-search/src/: main.rs
src/shared/arg0/: Cargo.toml
src/shared/arg0/src/: lib.rs
src/shared/common/: Cargo.toml  README.md
src/shared/common/src/: approval_mode_cli_arg.rs  approval_presets.rs  config_override.rs  config_summary.rs  lib.rs  sandbox_mode_cli_arg.rs  sandbox_summary.rs
src/shared/secrets/: Cargo.toml
src/shared/secrets/src/: lib.rs
src/tui/app/: Cargo.toml  styles.md  tooltips.txt
src/tui/app/src/: additional_dirs.rs  agent_selection_modal.rs  app.rs  app_backtrack.rs  app_event.rs  app_event_sender.rs  approval_mode_modal.rs  changelog.rs  chatwidget.rs  cli.rs  clipboard_text.rs  collab.rs  collaboration_modes.rs  custom_terminal.rs  cwd_prompt.rs  diff_render.rs  exec_command.rs  experimental_features_modal.rs  file_search.rs  get_git_diff.rs  (+36 more)
(+2731 files in other folders)
