[workspace]
members = [
    "src/core/agent-core",
    "src/core/agent-runtime",
    "src/shared/ansi-escape",
    "src/shared/async-utils",
    "src/integrations/app-server",
    "src/integrations/app-server-protocol",
    "src/resources/apply-patch",
    "src/shared/arg0",
    "src/agent/feedback",
    "src/resources/codex-backend-openapi-models",
    "src/agent/cli",
    "src/shared/common",
    "src/agent/runtime",
    "src/agent/identity",
    "src/platform/exec",
    "src/llm/types",
    "src/llm/runtime",
    "src/platform/sandbox/execpolicy",
    "src/resources/keyring-store",
    "src/resources/file-search",
    "src/platform/sandbox/linux",
    "src/integrations/mcp-server",
    "src/integrations/mcp-types",
    "src/platform/sandbox/process-hardening",
    "src/core/protocol",
    "src/integrations/rmcp-client",
    "src/integrations/responses-api-proxy",
    "src/platform/ipc/stdio-to-uds",
    "src/shared/otel",
    "src/tui/app",
    "src/shared/utils/absolute-path",
    "src/shared/utils/cargo-bin",
    "src/shared/utils/git",
    "src/shared/utils/cache",
    "src/shared/utils/image",
    "src/shared/utils/json-to-toml",
    "src/shared/utils/home-dir",
    "src/shared/utils/pty",
    "src/shared/utils/readiness",
    "src/shared/utils/sleep-inhibitor",
    "src/shared/utils/string",
    "src/llm/api/codex-client",
    "src/llm/api/codex-api",
    "src/core/state",
    "src/platform/sandbox/windows",
]
resolver = "2"

[workspace.package]
version = "0.95.0-alpha.1"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
# Internal
app_test_support = { path = "src/integrations/app-server/tests/common" }
adam-ansi-escape = { path = "src/shared/ansi-escape" }
adam-api = { path = "src/llm/api/codex-api" }
adam-app-server = { path = "src/integrations/app-server" }
adam-app-server-protocol = { path = "src/integrations/app-server-protocol" }
adam-apply-patch = { path = "src/resources/apply-patch" }
adam-arg0 = { path = "src/shared/arg0" }
adam-async-utils = { path = "src/shared/async-utils" }
adam-cli = { path = "src/agent/cli" }
adam-client = { path = "src/llm/api/codex-client" }
adam-common = { path = "src/shared/common" }
adam-agent = { path = "src/agent/runtime" }
adam-agent-core = { path = "src/core/agent-core" }
adam-agent-runtime = { path = "src/core/agent-runtime" }
adam-exec = { path = "src/platform/exec" }
adam-execpolicy = { path = "src/platform/sandbox/execpolicy" }
adam-feedback = { path = "src/agent/feedback" }
adam-identity = { path = "src/agent/identity" }
adam-file-search = { path = "src/resources/file-search" }
adam-git = { path = "src/shared/utils/git" }
adam-keyring-store = { path = "src/resources/keyring-store" }
adam-llm = { path = "src/llm/runtime" }
adam-linux-sandbox = { path = "src/platform/sandbox/linux" }
adam-llm-types = { path = "src/llm/types" }
adam-mcp-server = { path = "src/integrations/mcp-server" }
adam-otel = { path = "src/shared/otel" }
adam-process-hardening = { path = "src/platform/sandbox/process-hardening" }
adam-protocol = { path = "src/core/protocol" }
adam-responses-api-proxy = { path = "src/integrations/responses-api-proxy" }
adam-rmcp-client = { path = "src/integrations/rmcp-client" }
adam-state = { path = "src/core/state" }
adam-stdio-to-uds = { path = "src/platform/ipc/stdio-to-uds" }
adam-tui = { path = "src/tui/app" }
adam-utils-absolute-path = { path = "src/shared/utils/absolute-path" }
adam-utils-cache = { path = "src/shared/utils/cache" }
adam-utils-cargo-bin = { path = "src/shared/utils/cargo-bin" }
adam-utils-image = { path = "src/shared/utils/image" }
adam-utils-json-to-toml = { path = "src/shared/utils/json-to-toml" }
adam-utils-home-dir = { path = "src/shared/utils/home-dir" }
adam-utils-pty = { path = "src/shared/utils/pty" }
adam-utils-readiness = { path = "src/shared/utils/readiness" }
adam-utils-sleep-inhibitor = { path = "src/shared/utils/sleep-inhibitor" }
adam-utils-string = { path = "src/shared/utils/string" }
adam-windows-sandbox = { path = "src/platform/sandbox/windows" }
core_test_support = { path = "src/agent/runtime/tests/common" }
mcp-types = { path = "src/integrations/mcp-types" }
mcp_test_support = { path = "src/integrations/mcp-server/tests/common" }

# External
allocative = "0.3.3"
ansi-to-tui = "7.0.0"
anyhow = "1"
arboard = { version = "3", features = ["wayland-data-control"] }
assert_cmd = "2"
assert_matches = "1.5.0"
async-channel = "2.3.1"
async-stream = "0.3.6"
async-trait = "0.1.89"
axum = { version = "0.8", default-features = false }
base64 = "0.22.1"
bytes = "1.10.1"
chardetng = "0.1.17"
chrono = "0.4.43"
clap = "4"
clap_complete = "4"
color-eyre = "0.6.3"
crossterm = "0.28.1"
crossbeam-channel = "0.5.15"
csv = "1.4.0"
ctor = "0.6.3"
derive_more = "2"
diffy = "0.4.2"
dirs = "6"
dotenvy = "0.15.7"
dunce = "1.0.4"
encoding_rs = "0.8.35"
env-flags = "0.1.1"
env_logger = "0.11.5"
eventsource-stream = "0.2.3"
futures = { version = "0.3", default-features = false }
globset = "0.4"
http = "1.3.1"
icu_decimal = "2.1"
icu_locale_core = "2.1"
icu_provider = { version = "2.1", features = ["sync"] }
ignore = "0.4.23"
indoc = "2.0"
image = { version = "^0.25.9", default-features = false }
include_dir = "0.7.4"
indexmap = "2.12.0"
insta = "1.46.0"
itertools = "0.14.0"
jsonschema = "0.33.0"
keyring = { version = "3.6", default-features = false }
landlock = "0.4.4"
lazy_static = "1"
libc = "0.2.177"
log = "0.4"
lru = "0.16.3"
maplit = "1.0.2"
mime_guess = "2.0.5"
multimap = "0.10.0"
notify = "8.2.0"
nucleo = { git = "https://github.com/helix-editor/nucleo.git", rev = "4253de9faabb4e5c6d81d946a5e35a90f87347ee" }
once_cell = "1.20.2"
openssl-sys = "*"
opentelemetry = "0.31.0"
opentelemetry-appender-tracing = "0.31.0"
opentelemetry-otlp = "0.31.0"
opentelemetry-semantic-conventions = "0.31.0"
opentelemetry_sdk = "0.31.0"
tracing-opentelemetry = "0.32.0"
os_info = "3.12.0"
owo-colors = "4.2.0"
path-absolutize = "3.1.1"
pathdiff = "0.2"
portable-pty = "0.9.0"
predicates = "3"
pretty_assertions = "1.4.1"
pulldown-cmark = "0.10"
rand = "0.9"
ratatui = "0.29.0"
ratatui-macros = "0.6.0"
regex = "1.12.2"
regex-lite = "0.1.8"
reqwest = "0.12"
rmcp = { version = "0.12.0", default-features = false }
schemars = "0.8.22"
seccompiler = "0.5.0"
sentry = "0.46.0"
serde = "1"
serde_json = "1"
serde_path_to_error = "0.1.20"
serde_with = "3.16"
serde_yaml = "0.9"
serial_test = "3.2.0"
sha1 = "0.10.6"
sha2 = "0.10"
semver = "1.0"
shlex = "1.3.0"
similar = "2.7.0"
socket2 = "0.6.1"
sqlx = { version = "0.8.6", default-features = false, features = ["chrono", "json", "macros", "migrate", "runtime-tokio-rustls", "sqlite", "time", "uuid"] }
starlark = "0.13.0"
strum = "0.27.2"
strum_macros = "0.27.2"
supports-color = "3.0.2"
sys-locale = "0.3.2"
tempfile = "3.23.0"
test-log = "0.2.19"
textwrap = "0.16.2"
thiserror = "2.0.17"
time = "0.3"
tiny_http = "0.12"
tokio = "1"
tokio-stream = "0.1.18"
tokio-test = "0.4"
tokio-tungstenite = { version = "0.28.0", features = ["proxy", "rustls-tls-native-roots"] }
tokio-util = "0.7.18"
toml = "0.9.5"
toml_edit = "0.24.0"
tracing = "0.1.44"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.22"
tracing-test = "0.2.5"
tree-sitter = "0.25.10"
tree-sitter-bash = "0.25"
tree-sitter-highlight = "0.25.10"
ts-rs = "11"
uds_windows = "1.1.0"
unicode-segmentation = "1.12.0"
unicode-width = "0.2"
url = "2"
urlencoding = "2.1"
uuid = "1"
vt100 = "0.16.2"
walkdir = "2.5.0"
webbrowser = "1.0"
which = "8"
wildmatch = "2.6.1"
wiremock = "0.6"
zeroize = "1.8.2"
zstd = "0.13"

[workspace.lints]
rust = {}

[workspace.lints.clippy]
expect_used = "deny"
identity_op = "deny"
manual_clamp = "deny"
manual_filter = "deny"
manual_find = "deny"
manual_flatten = "deny"
manual_map = "deny"
manual_memcpy = "deny"
manual_non_exhaustive = "deny"
manual_ok_or = "deny"
manual_range_contains = "deny"
manual_retain = "deny"
manual_strip = "deny"
manual_try_fold = "deny"
manual_unwrap_or = "deny"
needless_borrow = "deny"
needless_borrowed_reference = "deny"
needless_collect = "deny"
needless_late_init = "deny"
needless_option_as_deref = "deny"
needless_question_mark = "deny"
needless_update = "deny"
redundant_clone = "deny"
redundant_closure = "deny"
redundant_closure_for_method_calls = "deny"
redundant_static_lifetimes = "deny"
trivially_copy_pass_by_ref = "deny"
uninlined_format_args = "deny"
unnecessary_filter_map = "deny"
unnecessary_lazy_evaluations = "deny"
unnecessary_sort_by = "deny"
unnecessary_to_owned = "deny"
unwrap_used = "deny"

[workspace.metadata.cargo-shear]
ignored = ["icu_provider", "openssl-sys", "adam-utils-readiness"]

[profile.release]
lto = "fat"
strip = "symbols"
codegen-units = 1

[profile.ci-test]
debug = 1
inherits = "test"
opt-level = 0

[patch.crates-io]
crossterm = { git = "https://github.com/nornagon/crossterm", branch = "nornagon/color-query" }
ratatui = { git = "https://github.com/nornagon/ratatui", branch = "nornagon-v0.29.0-patch" }
tokio-tungstenite = { git = "https://github.com/JakkuSakura/tokio-tungstenite", rev = "2ae536b0de793f3ddf31fc2f22d445bf1ef2023d" }

[patch."ssh://git@github.com/JakkuSakura/tungstenite-rs.git"]
tungstenite = { git = "https://github.com/JakkuSakura/tungstenite-rs", rev = "f514de8644821113e5d18a027d6d28a5c8cc0a6e" }
