[package]
name = "lha-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "lha"
path = "src/main.rs"

[lib]
name = "lha_cli"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
clap_complete = { workspace = true }
lha-app-server = { workspace = true }
lha-app-server-protocol = { workspace = true }
lha-arg0 = { workspace = true }
lha-common = { workspace = true, features = ["cli"] }
lha-agent = { workspace = true }
lha-exec = { workspace = true }
lha-execpolicy = { workspace = true }
lha-mcp-server = { workspace = true }
lha-protocol = { workspace = true }
lha-responses-api-proxy = { workspace = true }
lha-rmcp-client = { workspace = true }
lha-stdio-to-uds = { workspace = true }
lha-tui = { workspace = true }
libc = { workspace = true }
owo-colors = { workspace = true }
regex-lite = { workspace = true }
serde_json = { workspace = true }
supports-color = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
toml = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
lha_windows_sandbox = { package = "lha-windows-sandbox", path = "../../platform/sandbox/windows" }

[dev-dependencies]
assert_cmd = { workspace = true }
assert_matches = { workspace = true }
lha-utils-cargo-bin = { workspace = true }
predicates = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
