[package]
edition.workspace = true
license.workspace = true
name = "adam-agent"
version.workspace = true
build = "build.rs"

[lib]
doctest = false
name = "adam_agent"
path = "src/lib.rs"

[[bin]]
name = "adam-write-config-schema"
path = "src/bin/config_schema.rs"

[[bin]]
name = "adam-write-models-schema"
path = "src/bin/models_schema.rs"

[[bin]]
name = "adam-write-state-schema"
path = "src/bin/state_schema.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
arc-swap = "1.8.0"
async-channel = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chardetng = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
adam-api = { workspace = true }
adam-agent-core = { workspace = true }
adam-agent-runtime = { workspace = true }
adam-app-server-protocol = { workspace = true }
adam-apply-patch = { workspace = true }
adam-async-utils = { workspace = true }
adam-client = { workspace = true }
adam-execpolicy = { workspace = true }
adam-file-search = { workspace = true }
adam-git = { workspace = true }
adam-identity = { workspace = true }
adam-keyring-store = { workspace = true }
adam-llm = { workspace = true }
adam-otel = { workspace = true }
adam-protocol = { workspace = true }
adam-rmcp-client = { workspace = true }
adam-state = { workspace = true }
adam-utils-absolute-path = { workspace = true }
adam-utils-home-dir = { workspace = true }
adam-utils-pty = { workspace = true }
adam-utils-readiness = { workspace = true }
adam-utils-string = { workspace = true }
adam-windows-sandbox = { package = "adam-windows-sandbox", path = "../../platform/sandbox/windows" }
dunce = { workspace = true }
dirs = { workspace = true }
encoding_rs = { workspace = true }
env-flags = { workspace = true }
eventsource-stream = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
include_dir = { workspace = true }
indexmap = { workspace = true }
indoc = { workspace = true }
jsonschema = { workspace = true }
keyring = { workspace = true, features = ["crypto-rust"] }
libc = { workspace = true }
mcp-types = { workspace = true }
multimap = { workspace = true }
once_cell = { workspace = true }
os_info = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
regex-lite = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }
serde_yaml = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
shlex = { workspace = true }
similar = { workspace = true }
tempfile = { workspace = true }
test-case = "3.3.1"
test-log = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = [
    "formatting",
    "parsing",
    "local-offset",
    "macros",
] }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tokio-util = { workspace = true, features = ["rt"] }
tokio-tungstenite = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tree-sitter = { workspace = true }
tree-sitter-bash = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4", "v5"] }
which = { workspace = true }
wildmatch = { workspace = true }

[features]
deterministic_process_ids = []
test-support = []


[target.'cfg(target_os = "linux")'.dependencies]
keyring = { workspace = true, features = ["linux-native-async-persistent"] }
landlock = { workspace = true }
seccompiler = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
keyring = { workspace = true, features = ["apple-native"] }

# Build OpenSSL from source for musl builds.
[target.x86_64-unknown-linux-musl.dependencies]
openssl-sys = { workspace = true, features = ["vendored"] }

# Build OpenSSL from source for musl builds.
[target.aarch64-unknown-linux-musl.dependencies]
openssl-sys = { workspace = true, features = ["vendored"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { workspace = true, features = ["windows-native"] }

[target.'cfg(any(target_os = "freebsd", target_os = "openbsd"))'.dependencies]
keyring = { workspace = true, features = ["sync-secret-service"] }

[dev-dependencies]
assert_cmd = { workspace = true }
assert_matches = { workspace = true }
adam-arg0 = { workspace = true }
adam-agent = { path = ".", default-features = false, features = [
    "deterministic_process_ids",
] }
adam-otel = { workspace = true, features = [
    "disable-default-metrics-exporter",
] }
adam-utils-cargo-bin = { workspace = true }
core_test_support = { workspace = true }
ctor = { workspace = true }
image = { workspace = true, features = ["jpeg", "png"] }
maplit = { workspace = true }
predicates = { workspace = true }
pretty_assertions = { workspace = true }
opentelemetry_sdk = { workspace = true, features = [
    "experimental_metrics_custom_reader",
    "metrics",
] }
serial_test = { workspace = true }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-test = { workspace = true, features = ["no-env-filter"] }
walkdir = { workspace = true }
wiremock = { workspace = true }
zstd = { workspace = true }

[package.metadata.cargo-shear]
ignored = ["openssl-sys"]
